cros: Fix crash showing fullscreen app list in mash

Reason for crash:
DesktopNativeWidgetAura::InitNativeWidget binds current widget with the
root window's kDesktopNativeWidgetAuraKey for desktop build. But the
DCHECK in DesktopScreenPositionClient::SetBounds() expects current
widget's root window's kDesktopNativeWidgetAuraKey is not set or is not
set to the current widget.

Changes:
Set bounds widget's native view in parent window's coordinates instead
of screen coordinates to avoid calling Window::SetBoundsInScreen()
which triggers DesktopScreenPositionClient::SetBounds().

BUG=757573

Change-Id: Id627572256fd315ae4609d347a7999cecb2ee0f1